--- a/src/main/resources/com/matteotocci/app/Alimenti.fxml
+++ b/src/main/resources/com/matteotocci/app/Alimenti.fxml
@@ -51,7 +51,7 @@
                             <children>
                                 <Button fx:id="BottoneHome" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#AccessoHome" prefHeight="50.0" prefWidth="180.0" styleClass="nav-button" text="🏠 Home Page" />
                                 <Button fx:id="BottoneRicette" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#AccessoRicette" prefHeight="50.0" prefWidth="180.0" styleClass="nav-button" text="📖 Ricette" />
-                                <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="180.0" onAction="#AccessoPianoAlimentare" styleClass="nav-button" text="📋Piano Alimentare" />
+                                <Button mnemonicParsing="false" onAction="#AccessoPianoAlimentare" prefHeight="50.0" prefWidth="180.0" styleClass="nav-button" text="📋Piano Alimentare" />
                                 <Button fx:id="BottoneAlimenti" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#AccessoAlimenti" prefHeight="50.0" prefWidth="180.0" styleClass="nav-button,nav-button-active" text="🥗 Alimenti">
                                     <cursor>
                                         <Cursor fx:constant="HAND" />
@@ -63,15 +63,15 @@
                 </VBox>
 
                 <!-- CONTENUTO PRINCIPALE -->
-                <VBox maxWidth="1.7976931348623157E308" prefWidth="800.0" styleClass="main-content">
+                <VBox maxWidth="1.7976931348623157E308" prefWidth="800.0" styleClass="main-content" HBox.hgrow="ALWAYS">
                     <children>
                         <!-- SEZIONE RICERCA E FILTRI -->
-                        <VBox prefHeight="120.0" prefWidth="800.0" styleClass="search-section">
+                        <VBox prefHeight="120.0" prefWidth="800.0" styleClass="search-section" VBox.vgrow="NEVER">
                             <children>
                                 <!-- PRIMA RIGA CONTROLLI -->
-                                <HBox alignment="CENTER" prefHeight="45.0" prefWidth="800.0" spacing="10.0" styleClass="search-row">
+                                <HBox alignment="CENTER_LEFT" prefHeight="45.0" prefWidth="800.0" spacing="10.0" styleClass="search-row">
                                     <children>
-                                        <TextField fx:id="cercaAlimento" prefHeight="35.0" prefWidth="350.0" promptText="Cerca alimento..." styleClass="search-field" />
+                                        <TextField fx:id="cercaAlimento" prefHeight="35.0" prefWidth="350.0" promptText="Cerca alimento..." styleClass="search-field" HBox.hgrow="ALWAYS" />
                                         <Button fx:id="bottoneCerca" onAction="#handleCercaAlimento" prefHeight="35.0" prefWidth="120.0" styleClass="search-button" text="🔍 Cerca" />
                                         <ComboBox fx:id="categoriaComboBox" prefHeight="35.0" prefWidth="150.0" promptText="Categoria" styleClass="filter-combo" />
                                         <Button fx:id="bottoneAggiungi" onAction="#handleApriAggiunta" prefHeight="35.0" prefWidth="80.0" styleClass="add-button" text="➕" />
@@ -79,7 +79,7 @@
                                 </HBox>
 
                                 <!-- SECONDA RIGA CONTROLLI -->
-                                <HBox alignment="CENTER_LEFT" prefHeight="35.0" prefWidth="800.0" spacing="10.0" styleClass="filter-row">
+                                <HBox alignment="CENTER_LEFT" prefHeight="35.0" prefWidth="800.0" spacing="10.0" styleClass="filter-row" VBox.vgrow="NEVER">
                                     <children>
                                         <CheckBox fx:id="mieiAlimentiCheckBox" prefHeight="25.0" prefWidth="200.0" styleClass="filter-checkbox" text="📋 Solo i miei alimenti" />
                               <Region prefHeight="23.0" prefWidth="66.0" HBox.hgrow="ALWAYS" />
@@ -90,22 +90,25 @@
                         </VBox>
 
                         <!-- SEZIONE TABELLA -->
-                        <VBox styleClass="table-section">
+                        <VBox styleClass="table-section" VBox.vgrow="ALWAYS">
                             <children>
-                                <TableView fx:id="tableView" prefHeight="390.0" prefWidth="720.0" styleClass="alimenti-table">
+                                <TableView fx:id="tableView" editable="true" prefHeight="390.0" styleClass="alimenti-table" VBox.vgrow="ALWAYS">
                                     <columns>
-                                        <TableColumn fx:id="immagineCol" prefWidth="60.0" styleClass="table-column" text="📷" />
-                                        <TableColumn fx:id="nomeCol" prefWidth="120.0" styleClass="table-column" text="Nome" />
-                                        <TableColumn fx:id="brandCol" prefWidth="100.0" styleClass="table-column" text="Brand" />
-                                        <TableColumn fx:id="calorieCol" prefWidth="70.0" styleClass="table-column" text="Calorie" />
-                                        <TableColumn fx:id="proteineCol" prefWidth="70.0" styleClass="table-column" text="Proteine" />
-                                        <TableColumn fx:id="carboidratiCol" prefWidth="80.0" styleClass="table-column" text="Carboidrati" />
-                                        <TableColumn fx:id="grassiCol" prefWidth="70.0" styleClass="table-column" text="Grassi" />
-                                        <TableColumn fx:id="grassiSatCol" prefWidth="80.0" styleClass="table-column" text="G.Saturi" />
-                                        <TableColumn fx:id="saleCol" prefWidth="60.0" styleClass="table-column" text="Sale" />
-                                        <TableColumn fx:id="fibreCol" prefWidth="60.0" styleClass="table-column" text="Fibre" />
-                                        <TableColumn fx:id="zuccheriCol" prefWidth="70.0" styleClass="table-column" text="Zuccheri" />
+                                        <TableColumn fx:id="immagineCol" prefWidth="50.0" styleClass="table-column" text="📷" />
+                                        <TableColumn fx:id="nomeCol" prefWidth="50.0" styleClass="table-column" text="Nome" />
+                                        <TableColumn fx:id="brandCol" prefWidth="50.0" styleClass="table-column" text="Brand" />
+                                        <TableColumn fx:id="calorieCol" prefWidth="50.0" styleClass="table-column" text="Calorie" />
+                                        <TableColumn fx:id="proteineCol" prefWidth="50.0" styleClass="table-column" text="Proteine" />
+                                        <TableColumn fx:id="carboidratiCol" prefWidth="50.0" styleClass="table-column" text="Carboidrati" />
+                                        <TableColumn fx:id="grassiCol" prefWidth="50.0" styleClass="table-column" text="Grassi" />
+                                        <TableColumn fx:id="grassiSatCol" prefWidth="50.0" styleClass="table-column" text="G.Saturi" />
+                                        <TableColumn fx:id="saleCol" prefWidth="50.0" styleClass="table-column" text="Sale" />
+                                        <TableColumn fx:id="fibreCol" prefWidth="50.0" styleClass="table-column" text="Fibre" />
+                                        <TableColumn fx:id="zuccheriCol" prefWidth="50.0" styleClass="table-column" text="Zuccheri" />
                                     </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
                                 </TableView>
                             </children>
                         </VBox>
