--- a/src/main/resources/com/matteotocci/app/AlimentiNutrizionista.fxml
+++ b/src/main/resources/com/matteotocci/app/AlimentiNutrizionista.fxml
@@ -51,27 +51,27 @@
                         <!-- MENU NAVIGAZIONE NUTRIZIONISTA -->
                         <VBox spacing="5.0" styleClass="nav-menu" VBox.vgrow="ALWAYS">
                             <children>
-                                <Button maxWidth="Infinity" mnemonicParsing="false" prefHeight="50.0" styleClass="nav-button" text="👥 Clienti" onAction="#AccessoHome"/>
-                                <Button maxWidth="Infinity" mnemonicParsing="false" prefHeight="50.0" onAction="#AccessoAlimenti" styleClass="nav-button,nav-button-active" text="🥗 Alimenti" />
+                                <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#AccessoHome" prefHeight="50.0" styleClass="nav-button" text="👥 Clienti" />
+                                <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#AccessoAlimenti" prefHeight="50.0" styleClass="nav-button,nav-button-active" text="🥗 Alimenti" />
                                 <Button fx:id="BottoneRicette" maxWidth="Infinity" mnemonicParsing="false" onAction="#AccessoRicette" prefHeight="50.0" styleClass="nav-button" text="📖 Ricette">
                                     <cursor>
                                         <Cursor fx:constant="HAND" />
                                     </cursor>
                                 </Button>
-                                <Button layoutX="10.0" layoutY="76.0" maxWidth="Infinity" onAction="#AccessoDieta" mnemonicParsing="false" prefHeight="50.0" styleClass="nav-button" text="📋 Diete" />
+                                <Button layoutX="10.0" layoutY="76.0" maxWidth="Infinity" mnemonicParsing="false" onAction="#AccessoDieta" prefHeight="50.0" styleClass="nav-button" text="📋 Diete" />
                             </children>
                         </VBox>
                     </children>
                 </VBox>
 
                 <!-- CONTENUTO PRINCIPALE -->
-                <VBox maxWidth="1.7976931348623157E308" prefWidth="800.0" styleClass="main-content">
+                <VBox maxWidth="1.7976931348623157E308" prefWidth="800.0" styleClass="main-content" HBox.hgrow="ALWAYS">
                     <children>
                         <!-- SEZIONE RICERCA E FILTRI -->
                         <VBox prefHeight="120.0" prefWidth="800.0" styleClass="search-section">
                             <children>
                                 <!-- PRIMA RIGA CONTROLLI -->
-                                <HBox alignment="CENTER" prefHeight="45.0" prefWidth="800.0" spacing="10.0" styleClass="search-row">
+                                <HBox alignment="CENTER_LEFT" prefHeight="45.0" prefWidth="800.0" spacing="10.0" styleClass="search-row">
                                     <children>
                                         <TextField fx:id="cercaAlimento" prefHeight="35.0" prefWidth="350.0" promptText="Cerca alimento..." styleClass="search-field" />
                                         <Button fx:id="bottoneCerca" onAction="#handleCercaAlimento" prefHeight="35.0" prefWidth="120.0" styleClass="search-button" text="🔍 Cerca" />
@@ -94,7 +94,7 @@
                         <!-- SEZIONE TABELLA -->
                         <VBox styleClass="table-section">
                             <children>
-                                <TableView fx:id="tableView" prefHeight="390.0" prefWidth="720.0" styleClass="alimenti-table">
+                                <TableView fx:id="tableView" prefHeight="390.0" prefWidth="720.0" styleClass="alimenti-table" VBox.vgrow="ALWAYS">
                                     <columns>
                                         <TableColumn fx:id="immagineCol" prefWidth="60.0" styleClass="table-column" text="📷" />
                                         <TableColumn fx:id="nomeCol" prefWidth="120.0" styleClass="table-column" text="Nome" />
@@ -108,6 +108,9 @@
                                         <TableColumn fx:id="fibreCol" prefWidth="60.0" styleClass="table-column" text="Fibre" />
                                         <TableColumn fx:id="zuccheriCol" prefWidth="70.0" styleClass="table-column" text="Zuccheri" />
                                     </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
                                 </TableView>
                             </children>
                         </VBox>
