--- a/src/main/resources/com/matteotocci/app/RicetteNutrizionista.fxml
+++ b/src/main/resources/com/matteotocci/app/RicetteNutrizionista.fxml
@@ -51,8 +51,8 @@
                         <VBox prefHeight="400.0" prefWidth="200.0" spacing="5.0" styleClass="nav-menu">
                             <children>
                                 <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#AccessoHome" prefHeight="50.0" prefWidth="180.0" styleClass="nav-button" text="👥 Clienti" />
-                                <Button fx:id="BottoneAlimenti" mnemonicParsing="false" prefHeight="50.0" onAction="#AccessoAlimenti" prefWidth="180.0" styleClass="nav-button" text="🥗 Alimenti" />
-                                <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="50.0" onAction="#AccessoRicette" prefWidth="180.0" styleClass="nav-button,nav-button-active" text="📖 Ricette">
+                                <Button fx:id="BottoneAlimenti" mnemonicParsing="false" onAction="#AccessoAlimenti" prefHeight="50.0" prefWidth="180.0" styleClass="nav-button" text="🥗 Alimenti" />
+                                <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#AccessoRicette" prefHeight="50.0" prefWidth="180.0" styleClass="nav-button,nav-button-active" text="📖 Ricette">
                                     <cursor>
                                         <Cursor fx:constant="HAND" />
                                     </cursor>
@@ -69,7 +69,7 @@
                 </VBox>
 
                 <!-- CONTENUTO PRINCIPALE -->
-                <VBox maxWidth="1.7976931348623157E308" prefHeight="500.0" prefWidth="800.0" styleClass="main-content">
+                <VBox maxWidth="1.7976931348623157E308" prefHeight="500.0" prefWidth="800.0" styleClass="main-content" HBox.hgrow="ALWAYS">
                     <children>
                         <!-- SEZIONE RICERCA E FILTRI -->
                         <VBox prefHeight="120.0" prefWidth="800.0" styleClass="search-section">
@@ -77,7 +77,7 @@
                                 <!-- PRIMA RIGA CONTROLLI -->
                                 <HBox alignment="CENTER" prefHeight="45.0" prefWidth="800.0" spacing="10.0" styleClass="search-row">
                                     <children>
-                                        <TextField fx:id="cercaRicetta" prefHeight="35.0" prefWidth="350.0" promptText="Cerca ricetta..." styleClass="search-field" />
+                                        <TextField fx:id="cercaRicetta" prefHeight="35.0" prefWidth="350.0" promptText="Cerca ricetta..." styleClass="search-field" HBox.hgrow="ALWAYS" />
                                         <Button fx:id="bottoneCerca" onAction="#handleCercaRicetta" prefHeight="35.0" prefWidth="120.0" styleClass="search-button" text="🔍 Cerca" />
                                         <ComboBox fx:id="categorieRicette" prefHeight="35.0" prefWidth="150.0" promptText="Categoria" styleClass="filter-combo" />
                                         <Button fx:id="bottoneAggiungi" onAction="#handleApriAggiuntaRicetta" prefHeight="35.0" prefWidth="80.0" styleClass="add-button" text="➕" />
@@ -100,14 +100,17 @@
                         </VBox>
 
                         <!-- SEZIONE TABELLA -->
-                        <VBox styleClass="table-section">
+                        <VBox styleClass="table-section" VBox.vgrow="ALWAYS">
                             <children>
-                                <TableView fx:id="tableViewRicette" editable="true" prefHeight="390.0" prefWidth="720.0" styleClass="ricette-table">
+                                <TableView fx:id="tableViewRicette" editable="true" prefHeight="390.0" prefWidth="720.0" styleClass="ricette-table" VBox.vgrow="ALWAYS">
                                     <columns>
                                         <TableColumn fx:id="nomeCol" prefWidth="200.0" styleClass="table-column" text="Nome" />
                                         <TableColumn fx:id="descrizioneCol" prefWidth="400.0" styleClass="table-column" text="Descrizione" />
                                         <TableColumn fx:id="categoriaCol" prefWidth="120.0" styleClass="table-column" text="Categoria" />
                                     </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
                                 </TableView>
                             </children>
                         </VBox>
