--- a/src/main/resources/com/matteotocci/app/css/AggiungiRicetta-Style.css
+++ b/src/main/resources/com/matteotocci/app/css/AggiungiRicetta-Style.css
@@ -182,6 +182,11 @@
     -fx-padding: 6 3;
 }
 
+#tableView .column-header .label{
+    -fx-text-fill: white !important;
+}
+
+
 #tableView .table-row-cell {
     -fx-background-color: linear-gradient(to bottom, #ffffff, #fdf8f7);
     -fx-border-color: rgba(139,58,58,0.08);
@@ -351,6 +356,9 @@
 #ingredientiTable .column-header-background {
     -fx-background-color: linear-gradient(to bottom, #4F7942, #5A8A4A);
     -fx-background-radius: 10 10 0 0;
+}
+#ingredientiTable .column-header .label{
+    -fx-text-fill: white !important;
 }
 
 #ingredientiTable .column-header {
