--- a/src/main/resources/com/matteotocci/app/css/Alimenti-Style.css
+++ b/src/main/resources/com/matteotocci/app/css/Alimenti-Style.css
@@ -219,6 +219,10 @@
     -fx-background-radius: 10 10 0 0;
 }
 
+.alimenti-table .column-header .label{
+    -fx-text-fill: white !important;
+}
+
 .alimenti-table .column-header {
     -fx-background-color: transparent;
     -fx-text-fill: white;
@@ -234,6 +238,7 @@
     -fx-border-color: rgba(139,58,58,0.08);
     -fx-border-width: 0 0 1 0;
     -fx-padding: 5;
+    -fx-cursor: hand;
 }
 
 .alimenti-table .table-row-cell:hover {
@@ -285,20 +290,7 @@
     -fx-transition: all 0.3s ease;
 }
 
-/* ===== RESPONSIVE DESIGN ===== */
-@media (max-width: 1200px) {
-    .search-row {
-        -fx-spacing: 8;
-    }
 
-    .search-field {
-        -fx-pref-width: 300;
-    }
-
-    .table-column {
-        -fx-pref-width: 65;
-    }
-}
 
 /* ===== STATI HOVER PERSONALIZZATI ===== */
 .search-field:hover {
